--- a/views/layouts/main.ejs
+++ b/views/layouts/main.ejs
@@ -28,6 +28,8 @@
     <script src="https://cdn.jsdelivr.net/npm/toastify-js"></script>
     <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/15.5.0/nouislider.min.css" rel="stylesheet">
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/noUiSlider/15.5.0/nouislider.min.js"></script>
 </head>
 
 <body>
