--- a/views/user/product folder/product.ejs
+++ b/views/user/product folder/product.ejs
@@ -330,15 +330,16 @@
                     cartCount.textContent = (parseInt(cartCount.textContent) + 1).toString();
                 }
 
-                Toastify({
+                Swal.fire({
+                    title: 'Success!',
                     text: response.data,
-                    duration: 2000,
-                    gravity: "top",
-                    position: "right",
-                    backgroundColor: "linear-gradient(135deg, rgba(144, 238, 144, 0.9), rgba(50, 205, 50, 0.9))",
-                    stopOnFocus: true,
-                    className: "toast_style"
-                }).showToast();
+                    icon: 'success',
+                    confirmButtonText: 'OK',
+                    timer: 2000,
+                    timerProgressBar: true,
+                    position: 'center',
+                    showConfirmButton: false
+                });
             }
         } catch (error) {
             console.error('Error adding to cart:', error);
