--- a/views/user/dashboard/order folder/orders.ejs
+++ b/views/user/dashboard/order folder/orders.ejs
@@ -119,7 +119,7 @@
                         class="inline-flex items-center justify-center px-4 py-2 bg-orange-100 text-orange-600 rounded-md hover:bg-orange-200 transition-colors duration-200">
                          <i class="fas fa-info-circle mr-2"></i>View Details
                      </a>
-                    <% if(order.status !== "Cancelled" && order.status !== "Returned" && order.status !== "Out for delivery" && order.status !== "Delivered"){ %>
+                    <% if(order.status !== "Cancelled" && order.status !== "Returned" && order.status !== "Out for delivery" && order.status !== "Delivered" && order.status !== "Payment failed"){ %>
                         <button id="cancelBtn" class="btn btn-danger" onclick="cancelOrder('<%= order._id %>')">Cancel Order</button>
                     <% } %>
                     <% if(order.status === "Delivered" && Date.now() <= (new Date(order.deliveredOn).getTime() + 7 * 24 * 60 * 60 * 1000) && order.returnDetails.returnStatus !== 'Rejected'){ %>
