fixed bug in google sign in for new users

--- a/views/user/dashboard/profile.ejs
+++ b/views/user/dashboard/profile.ejs
@@ -367,7 +367,7 @@
                     <div class="mb-4">
                         <label class="block font-bold mb-2">Joined At</label>
                         <div class="form-input">
-                            <%= user.createdAt %>
+                            <%= user.createdAt.toLocaleDateString('en-US', { year: 'numeric', month: 'long', day: 'numeric' }) %>
                         </div>
                     </div>
                 </div>
